--- a/as.html
+++ b/as.html
@@ -39,7 +39,7 @@
             <div>
                 <h1>Hello, <span></span></h1>
                 <h1>My Name is <span></span></h1>
-                <h1>Shashidhar <span></span></h1>
+                <h1>Shashidhar HS<span></span></h1>
                 <a href="#projects" type="button" class="cta">Portfolio</a>
             </div>
         </div>
